# comp3141-SoftwareSystemDesignImplementation

./: README.md
week1/Code/: Example.hs  Task1.hs
week10/Code/: Lecture9.hs
week2/: Practical2.hs
week2/Code/: Examples.hs  Lecture2.hs
week3/: Practical3.hs
week3/Code/: Lecture3.hs
week4/: Quiz (Week 4).html
week4/Code/: Email.hs  Lecture4.cabal  Lecture4.hs
week4/Quiz (Week 4)_files/: bundle.css  css
week5/: Quiz (Week 5).html
week5/Code/: Lecture5.hs
week7/: Quiz (Week 7).html
week7/Code/: Lecture6.hs  quiz06.hs
week8/Code/: Lecture7.cabal  Lecture7.hs  example1.py  example2.py  quiz07.hs
week9/Code/: Lecture8.cabal  Lecture8.hs  Lecture8DK.hs  quiz08.hs
